# freecad-make

./: LICENSE  README.md  export.py  makefile.mk  pyproject.toml
examples/: Makefile  PartDesignExample_0.1.0.step
examples/src/: PartDesignExample.FCStd
src/freecad_export/: cli.py  export.py
